<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popuplayout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item"
                android:layout_below="@id/title" />


            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_quantity"
                android:layout_below="@id/babyItem" />


            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_color"
                android:layout_below="@id/itemQuantity" />


            <EditText
                android:id="@+id/itemSize"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_size"
                android:layout_below="@id/itemColor" />

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/itemSize"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>